test/1.4/errors/T_EAUNKDIMSIZE.dml
/*
  © 2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR EAUNKDIMSIZE
group g1[i < ...];

// no error
group g2[i < ...];
group g2[i < 4];
group g2[i < ...];


template t {
    group g3[i < 4];
}
// no error
group g3[i < ...];
is t;

/// ERROR EAUNKDIMSIZE
group g4[i < 4][j < ...];
group g4[i < ...][j < ...];

// no error
group g5[i < 4][j < ...];
group g5[i < ...][j < 7];
